<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="__arcore_cancel">Cancel</string>
    <string name="__arcore_continue">Continue</string>
    <string name="__arcore_install_app">This application requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_install_feature">This feature requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_installing">Installing Google Play Services for AR…</string>
    <string name="__leak_canary_display_activity_label">FreeMovies Leaks</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">"Account
"</string>
    <string name="action_facebook_sign_in">facebook</string>
    <string name="action_google_plus_sign_in">google+</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_favorite_all">Show all</string>
    <string name="action_show_favorite_movie">Show movies only</string>
    <string name="action_show_favorite_recent">Show recently list</string>
    <string name="action_show_favorite_tv">Show tvShows only</string>
    <string name="action_show_sort_az">Sort A -> Z</string>
    <string name="action_show_sort_latest">Sort Latest</string>
    <string name="action_show_sort_za">Sort Z -> A</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">register</string>
    <string name="action_sort_season">Show movies only</string>
    <string name="action_synctrakt">Sync trakt</string>
    <string name="action_year_filter">Filter</string>
    <string name="activation_info">Your code information:</string>
    <string name="activation_intro">"Advertising is to support the developer team in making the application better, but it can be an annoyance for users. Therefore, we offer a member activation code to remove all advertising for those who want to enjoy movies without interruption. We also provide free activation codes for members who have contributed to the app's success."</string>
    <string name="ad_app_id" />
    <string name="ad_unit_id_banner_setting" />
    <string name="ad_unit_id_native_express_movie_details" />
    <string name="ad_unit_id_native_express_movie_item" />
    <string name="advertisement">Ad</string>
    <string name="alert_description">Alert</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">CinemaHD-v3</string>
    <string name="app_update_notification_channel_description">Notifications for new Cinema version</string>
    <string name="app_update_notification_channel_id">CinemaAppUpdate</string>
    <string name="app_update_notification_channel_name">App Update Notification</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appinstall_imagedescription">Screenshot</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="audio">audio</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="auto_close_windows">"1: The payment is not acceptable if: 
\u0009- The amount of bitcoin is wrong
\u0009- Time is out at the time of transfer.
2: This window will be closed automatically after you send the exact amount of bitcoin.
3: Payment information will be sent to your email."</string>
    <string name="auto_play_header">AUTO PLAY</string>
    <string name="auto_play_header_summary">Setting for show play next</string>
    <string name="auto_play_next">Auto play when collecting %d links. You can set it in settings.</string>
    <string name="autoupdate_confirm_cancel">Cancel</string>
    <string name="autoupdate_confirm_content">Do you want to cancel the download?</string>
    <string name="autoupdate_confirm_install">Install</string>
    <string name="autoupdate_confirm_no">No</string>
    <string name="autoupdate_confirm_ok">OK</string>
    <string name="autoupdate_confirm_retry">Retry</string>
    <string name="autoupdate_confirm_yes">Yes</string>
    <string name="autoupdate_dont_show">"Don't show again"</string>
    <string name="autoupdate_main_content">A new version is available. Do you want to install it now?</string>
    <string name="autoupdate_retry_content">An error occurred during download. Please try again.</string>
    <string name="autoupdate_title">NEW VERSION</string>
    <string name="autoupdate_unknown_source_content">To install the new version, you need to enable Unknown sources in your settings.</string>
    <string name="backup_restore_header">BACKUP AND RESTORE</string>
    <string name="backup_restore_header_summary" />
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brightness">Brightness: %1$d</string>
    <string name="bvp_left">LEFT</string>
    <string name="bvp_right">RIGHT</string>
    <string name="calendar">Calendar</string>
    <string name="cancel">cancel</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connected">Cast device is connected!</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_head_description">Current position is at the head of the live stream</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_live_label">LIVE</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="create_account">Create Account</string>
    <string name="custom_token">Custom Token</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="login">Login</string>
    <string name="movie_details_rating">Average rating: %.1f</string>
    <string name="msg_name">Download %s</string>
    <string name="msg_threads">Threads</string>
    <string name="overview">Overview</string>
    <string name="password">Password</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="release_date">Release date</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="start">start</string>
    <string name="start_phone_auth">Start</string>
    <string name="token_null">Token: null</string>
    <string name="username">User Name</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify_phone_auth">Verify</string>
</resources>