<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/firebase_lockup_400" android:contentDescription="@string/desc_firebase_lockup" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/custom_token" style="@style/TextAppearance.AppCompat.Medium" />
    <TextView android:ellipsize="end" android:id="@id/text_token_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/token_null" android:maxLines="1" android:singleLine="true" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginBottom="8.0dip" android:text="@string/firebase_user_management" style="@style/TextAppearance.AppCompat.Medium" />
    <TextView android:id="@id/text_sign_in_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/signed_out" />
    <Button android:enabled="false" android:id="@id/button_sign_in" android:layout_width="@dimen/field_width_standard" android:layout_height="wrap_content" android:text="@string/sign_in" />
</LinearLayout>