<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/main_layout" android:background="@color/grey_100" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="4.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="3.0">
        <ImageView android:id="@id/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/firebase_lockup_400" android:contentDescription="@string/desc_firebase_lockup" style="@style/ThemeOverlay.FirebaseIcon" />
        <TextView android:theme="@style/ThemeOverlay.MyTitleText" android:id="@id/title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/title_bottom_margin" android:text="@string/emailpassword_title_text" />
        <TextView android:id="@id/status" android:text="@string/signed_out" style="@style/ThemeOverlay.MyTextDetail" />
        <TextView android:id="@id/detail" style="@style/ThemeOverlay.MyTextDetail" />
    </LinearLayout>
    <RelativeLayout android:gravity="center_vertical" android:background="@color/grey_300" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="horizontal" android:id="@id/email_password_fields" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/field_email" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/hint_email" android:layout_weight="1.0" android:inputType="textEmailAddress" />
            <EditText android:id="@id/field_password" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/hint_password" android:layout_weight="1.0" android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/email_password_buttons" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/email_password_fields">
            <Button android:theme="@style/ThemeOverlay.MyDarkButton" android:id="@id/email_sign_in_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sign_in" android:layout_weight="1.0" />
            <Button android:theme="@style/ThemeOverlay.MyDarkButton" android:id="@id/email_create_account_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/create_account" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/signed_in_buttons" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0" android:layout_centerInParent="true">
            <Button android:theme="@style/ThemeOverlay.MyDarkButton" android:id="@id/sign_out_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sign_out" android:layout_weight="1.0" />
            <Button android:theme="@style/ThemeOverlay.MyDarkButton" android:id="@id/verify_email_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/verify_email" android:layout_weight="1.0" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>