<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/main_layout" android:background="@color/grey_100" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="4.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="3.0">
        <ImageView android:id="@id/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/firebase_lockup_400" android:contentDescription="@string/desc_firebase_lockup" style="@style/ThemeOverlay.FirebaseIcon" />
        <TextView android:theme="@style/ThemeOverlay.MyTitleText" android:id="@id/title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/title_bottom_margin" android:text="@string/phone_title_text" />
        <TextView android:id="@id/status" android:text="@string/signed_out" style="@style/ThemeOverlay.MyTextDetail" />
        <TextView android:id="@id/detail" style="@style/ThemeOverlay.MyTextDetail" />
    </LinearLayout>
    <RelativeLayout android:gravity="center_vertical" android:background="@color/grey_300" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/phone_auth_fields" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0">
                <EditText android:id="@id/field_phone_number" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/hint_phone_number" android:layout_weight="1.0" android:inputType="phone" />
                <EditText android:id="@id/field_verification_code" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/hint_verification_code" android:layout_weight="1.0" android:inputType="number" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="3.0">
                <Button android:theme="@style/ThemeOverlay.MyDarkButton" android:id="@id/button_start_verification" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/start_phone_auth" android:layout_weight="1.0" />
                <Button android:theme="@style/ThemeOverlay.MyDarkButton" android:id="@id/button_verify_phone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/verify_phone_auth" android:layout_weight="1.0" />
                <Button android:theme="@style/ThemeOverlay.MyDarkButton" android:id="@id/button_resend" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/resend_phone_auth" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/signed_in_buttons" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0" android:layout_centerInParent="true">
            <Button android:theme="@style/ThemeOverlay.MyDarkButton" android:id="@id/sign_out_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sign_out" android:layout_weight="1.0" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>