<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/main_layout" android:background="@color/grey_100" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="4.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="3.0">
        <ImageView android:id="@id/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/firebase_lockup_400" android:contentDescription="@string/desc_firebase_lockup" style="@style/ThemeOverlay.FirebaseIcon" />
        <TextView android:theme="@style/ThemeOverlay.MyTitleText" android:id="@id/title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/title_bottom_margin" android:text="@string/firebaseui_title_text" />
        <TextView android:id="@id/status" android:text="@string/signed_out" style="@style/ThemeOverlay.MyTextDetail" />
        <TextView android:id="@id/detail" style="@style/ThemeOverlay.MyTextDetail" />
    </LinearLayout>
    <RelativeLayout android:gravity="center_vertical" android:background="@color/grey_300" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:theme="@style/ThemeOverlay.MyDarkButton" android:id="@id/sign_in_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_in" android:layout_centerInParent="true" />
        <Button android:theme="@style/ThemeOverlay.MyDarkButton" android:id="@id/sign_out_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_out" android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>