<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/constraintLayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:id="@id/loading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="32.0dip" android:layout_marginRight="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="?android:progressBarStyle" />
        <LinearLayout android:orientation="vertical" android:id="@id/content" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/text_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <TextView android:textAppearance="@style/TextAppearance.Title" android:id="@id/tvName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hello_blank_fragment" android:singleLine="false" />
            <TextView android:id="@id/tvtime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/release_date" />
            <TextView android:id="@id/ctRating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movie_details_rating" />
            <TextView android:ellipsize="end" android:id="@id/tvOverview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/overview" />
        </LinearLayout>
        <FrameLayout android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>