<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffbfd4e7" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_large" android:textColor="#ffffffff" android:gravity="center" android:id="@id/textView2" android:background="@color/gray_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/autoupdate_title" />
        <View android:background="@color/card_shape_background" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:gravity="center_horizontal" android:id="@id/message_autoupdate_unknowsource" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/autoupdate_unknown_source_content" android:ems="10" android:inputType="textMultiLine" />
        <LinearLayout android:gravity="right" android:orientation="horizontal" android:background="@color/theme_primary_dark" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginTop="3.0dip">
            <Button android:textColor="#ffffffff" android:id="@id/btn_update_unknowsource_oke" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autoupdate_confirm_ok" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>