<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/file_name_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="6.0dip" android:text="@string/msg_name" android:layout_alignParentTop="true" />
    <EditText android:id="@id/file_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="6.0dip" android:maxLines="1" android:layout_below="@id/file_name_text_view" android:inputType="text" />
    <TextView android:id="@id/threads_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="6.0dip" android:text="@string/msg_threads" android:layout_below="@id/file_name" />
    <LinearLayout android:orientation="horizontal" android:id="@id/thread" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_below="@id/threads_text_view">
        <TextView android:gravity="center_vertical" android:id="@id/threads_count" android:paddingLeft="2.0dip" android:layout_width="25.0dip" android:layout_height="fill_parent" />
        <SeekBar android:id="@id/threads" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="31" android:progress="3" />
    </LinearLayout>
    <Button android:id="@id/download_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start" android:layout_below="@id/thread" android:layout_alignEnd="@id/thread" />
</RelativeLayout>